[package]
name = "leaf-wasm-js"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
http = "0.2.8"
leaf-sdk = { git = "https://github.com/fuxiaohei/leaf-wasm" }
leaf-sdk-macro = { git = "https://github.com/fuxiaohei/leaf-wasm" }
quickjs-wasm-rs = { git = "https://github.com/shopify/javy" }
quickjs-wasm-sys = { git = "https://github.com/shopify/javy" }
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[lib]
crate-type = ["cdylib"]

[workspace.package]
version = "0.1.11"
authors = ["fuxiaohei<fudong0797@gmail.com>"]
edition = "2021"
