[package]
name = "leaf-wasm-js"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
http = "0.2.8"
leaf-sdk = { git = "https://github.com/fuxiaohei/leaf-wasm" }
leaf-sdk-macro = { git = "https://github.com/fuxiaohei/leaf-wasm" }
once_cell = "1.17.0"
quickjs-wasm-rs = "0.1.3"
quickjs-wasm-sys = "0.1.1"
send_wrapper = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.8"
serde_derive = "1.0.152"
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[lib]
crate-type = ["cdylib"]

[workspace.package]
version = "0.1.16"
authors = ["fuxiaohei<fudong0797@gmail.com>"]
edition = "2021"
